chore: extraKernelArgs validation for UKI's
Add validation for `.machine.install.extraKernelArgs`.

Fixes: #10339

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/.kres.yaml
+++ b/.kres.yaml
@@ -1705,6 +1705,9 @@ spec:
             PLATFORM: linux/amd64,linux/arm64
             IMAGE_REGISTRY: registry.dev.siderolabs.io
             PUSH: true
+        - name: talosctl-cni-bundle
+          conditions:
+            - only-on-schedule
         - name: image-cache
           command: cache-create
           environment:
