--- a/.github/workflows/integration-image-cache-cron.yaml
+++ b/.github/workflows/integration-image-cache-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-03-11T13:55:38Z by kres ec5ec04.
+# Generated on 2025-03-13T09:44:11Z by kres ec5ec04.
 
 name: integration-image-cache-cron
 concurrency:
@@ -80,6 +80,10 @@ jobs:
           PUSH: "true"
         run: |
           make talosctl-linux-amd64 kernel sd-boot sd-stub initramfs installer-base imager
+      - name: talosctl-cni-bundle
+        if: github.event_name == 'schedule'
+        run: |
+          make talosctl-cni-bundle
       - name: image-cache
         env:
           IMAGE_REGISTRY: registry.dev.siderolabs.io
