test: allocate more resources for conformance runs
There was a wrong variable, but also always use more resources.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/.github/workflows/integration-conformance-cron.yaml
+++ b/.github/workflows/integration-conformance-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-02-26T15:23:43Z by kres 1281806.
+# Generated on 2025-03-13T11:51:46Z by kres ec5ec04.
 
 name: integration-conformance-cron
 concurrency:
@@ -82,7 +82,8 @@ jobs:
         env:
           GITHUB_STEP_NAME: ${{ github.job}}-conformance-qemu
           IMAGE_REGISTRY: registry.dev.siderolabs.io
-          QEMU_CPUS: "4"
+          QEMU_CPUS_WORKERS: "6"
+          QEMU_MEMORY_WORKERS: "4096"
           TEST_MODE: fast-conformance
         run: |
           sudo -E make e2e-qemu
