--- a/.github/workflows/integration-misc-1-enforcing-cron.yaml
+++ b/.github/workflows/integration-misc-1-enforcing-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-03-24T09:55:56Z by kres ec5ec04.
+# Generated on 2025-04-01T10:44:44Z by kres d903dae.
 
 name: integration-misc-1-enforcing-cron
 concurrency:
@@ -70,10 +70,8 @@ jobs:
         if: github.event_name == 'schedule'
         env:
           IMAGE_REGISTRY: registry.dev.siderolabs.io
-          IMAGER_ARGS: --extra-kernel-arg=enforcing=1
-          PLATFORM: linux/amd64
+          PLATFORM: linux/amd64,linux/arm64
           PUSH: "true"
-          TAG_SUFFIX: -enforcing
         run: |
           make talosctl-linux-amd64 kernel sd-boot sd-stub initramfs installer-base imager talos _out/integration-test-linux-amd64
       - name: talosctl-cni-bundle
@@ -86,16 +84,16 @@ jobs:
           IMAGER_ARGS: --extra-kernel-arg=console=ttyS0 --extra-kernel-arg=enforcing=1
           PLATFORM: linux/amd64,linux/arm64
           PUSH: "true"
-          TAG_SUFFIX: -enforcing
+          TAG_SUFFIX_OUT: -enforcing
         run: |
-          make imager installer-base installer images-essential
+          make images-essential
       - name: e2e-no-cluster-discovery
         env:
           EXTRA_TEST_ARGS: -talos.enforcing
           GITHUB_STEP_NAME: ${{ github.job}}-e2e-no-cluster-discovery
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
-          TAG_SUFFIX: -enforcing
+          TAG_SUFFIX_IN: -enforcing
           WITH_CLUSTER_DISCOVERY: "false"
         run: |
           sudo -E make e2e-qemu
@@ -105,7 +103,7 @@ jobs:
           GITHUB_STEP_NAME: ${{ github.job}}-e2e-kubespan
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
-          TAG_SUFFIX: -enforcing
+          TAG_SUFFIX_IN: -enforcing
           WITH_CLUSTER_DISCOVERY: "true"
           WITH_KUBESPAN: "true"
         run: |
@@ -117,7 +115,7 @@ jobs:
           GITHUB_STEP_NAME: ${{ github.job}}-e2e-default-hostname
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
-          TAG_SUFFIX: -enforcing
+          TAG_SUFFIX_IN: -enforcing
           VIA_MAINTENANCE_MODE: "true"
         run: |
           sudo -E make e2e-qemu
@@ -130,7 +128,7 @@ jobs:
           QEMU_MEMORY_WORKERS: "1024"
           QEMU_SYSTEM_DISK_SIZE: "10240"
           SHORT_INTEGRATION_TEST: "yes"
-          TAG_SUFFIX: -enforcing
+          TAG_SUFFIX_IN: -enforcing
         run: |
           sudo -E make e2e-qemu
       - name: save artifacts
