--- a/.github/workflows/integration-misc-1-cron.yaml
+++ b/.github/workflows/integration-misc-1-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-02-26T15:23:43Z by kres 1281806.
+# Generated on 2025-03-21T16:23:54Z by kres ec5ec04.
 
 name: integration-misc-1-cron
 concurrency:
@@ -89,7 +89,7 @@ jobs:
       - name: e2e-kubespan
         env:
           GITHUB_STEP_NAME: ${{ github.job}}-e2e-kubespan
-          IMAGE_REGISTRY: registry.dev.siderolabs.io\
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
           WITH_CLUSTER_DISCOVERY: "true"
           WITH_KUBESPAN: "true"
