--- a/.github/workflows/integration-misc-1-enforcing-cron.yaml
+++ b/.github/workflows/integration-misc-1-enforcing-cron.yaml
@@ -2,13 +2,13 @@
 #
 # Generated on 2025-03-21T15:51:32Z by kres ec5ec04.
 
-name: integration-qemu-encrypted-vip-cron
+name: integration-misc-1-enforcing-cron
 concurrency:
   group: ${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 "on":
   schedule:
-    - cron: 30 3 * * *
+    - cron: 30 5 * * *
 jobs:
   default:
     runs-on:
@@ -70,31 +70,65 @@ jobs:
         if: github.event_name == 'schedule'
         env:
           IMAGE_REGISTRY: registry.dev.siderolabs.io
+          IMAGER_ARGS: --extra-kernel-arg=enforcing=1
           PLATFORM: linux/amd64
           PUSH: "true"
+          TAG_SUFFIX: -enforcing
         run: |
           make talosctl-linux-amd64 kernel sd-boot sd-stub initramfs installer-base imager talos _out/integration-test-linux-amd64
       - name: talosctl-cni-bundle
         if: github.event_name == 'schedule'
         run: |
           make talosctl-cni-bundle
-      - name: e2e-qemu
+      - name: e2e-no-cluster-discovery
         env:
+          EXTRA_TEST_ARGS: -talos.enforcing
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-no-cluster-discovery
           IMAGE_REGISTRY: registry.dev.siderolabs.io
-          QEMU_EXTRA_DISKS: "3"
-          QEMU_EXTRA_DISKS_DRIVERS: ide,nvme
-          QEMU_EXTRA_DISKS_SIZE: "10240"
-          WITH_CONFIG_PATCH_WORKER: '@hack/test/patches/ephemeral-nvme.yaml:@hack/test/patches/dm-raid-module.yaml'
-          WITH_DISK_ENCRYPTION: "true"
+          SHORT_INTEGRATION_TEST: "yes"
+          TAG_SUFFIX: -enforcing
+          WITH_CLUSTER_DISCOVERY: "false"
+        run: |
+          sudo -E make e2e-qemu
+      - name: e2e-kubespan
+        env:
+          EXTRA_TEST_ARGS: -talos.enforcing
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-kubespan
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+          SHORT_INTEGRATION_TEST: "yes"
+          TAG_SUFFIX: -enforcing
+          WITH_CLUSTER_DISCOVERY: "true"
           WITH_KUBESPAN: "true"
-          WITH_VIRTUAL_IP: "true"
+        run: |
+          sudo -E make e2e-qemu
+      - name: e2e-default-hostname
+        env:
+          DISABLE_DHCP_HOSTNAME: "true"
+          EXTRA_TEST_ARGS: -talos.enforcing
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-default-hostname
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+          SHORT_INTEGRATION_TEST: "yes"
+          TAG_SUFFIX: -enforcing
+          VIA_MAINTENANCE_MODE: "true"
+        run: |
+          sudo -E make e2e-qemu
+      - name: e2e-min-requirements
+        env:
+          EXTRA_TEST_ARGS: -talos.enforcing
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-min-requirements
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+          QEMU_MEMORY_CONTROLPLANES: "2048"
+          QEMU_MEMORY_WORKERS: "1024"
+          QEMU_SYSTEM_DISK_SIZE: "10240"
+          SHORT_INTEGRATION_TEST: "yes"
+          TAG_SUFFIX: -enforcing
         run: |
           sudo -E make e2e-qemu
       - name: save artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: talos-logs-integration-qemu-encrypted-vip
+          name: talos-logs-integration-misc-1-enforcing
           path: |-
             /tmp/logs-*.tar.gz
             /tmp/support-*.zip
