--- a/.github/workflows/integration-qemu-enforcing-cron.yaml
+++ b/.github/workflows/integration-qemu-enforcing-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-03-21T15:51:32Z by kres ec5ec04.
+# Generated on 2025-03-24T09:55:56Z by kres ec5ec04.
 
 name: integration-qemu-enforcing-cron
 concurrency:
@@ -76,6 +76,15 @@ jobs:
           TAG_SUFFIX: -enforcing
         run: |
           make talosctl-linux-amd64 kernel sd-boot sd-stub initramfs installer-base imager talos _out/integration-test-linux-amd64
+      - name: images-essential-enforcing
+        env:
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+          IMAGER_ARGS: --extra-kernel-arg=console=ttyS0 --extra-kernel-arg=enforcing=1
+          PLATFORM: linux/amd64,linux/arm64
+          PUSH: "true"
+          TAG_SUFFIX: -enforcing
+        run: |
+          make images-essential
       - name: talosctl-cni-bundle
         if: github.event_name == 'schedule'
         run: |
